--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 on:
   workflow_dispatch:
-  push:
-    branches: main
-  schedule:
-    - cron: '0 9 * * *'
+  #push:
+    #branches: main
+  #schedule:
+    #- cron: '0 9 * * *'
 
 name: Quarto Publish
 
